--- a/style.css
+++ b/style.css
@@ -100,3 +100,9 @@ input[type=text]:focus {
 input[type=text]:placeholder {
     color: #cccccc;
 }
+
+.homeApp {
+    margin-left: 30%;
+    margin-right: 30%;
+    border: solid #39ace7;
+}
